--- a/app/src/main/res/layout/activity_boot_screen.xml
+++ b/app/src/main/res/layout/activity_boot_screen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFCCD3"
+    android:background="#FDEEEE"
     tools:context=".BootScreen">
 
     <TextView
