--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -6,17 +6,108 @@
     android:layout_height="match_parent"
     tools:context=".ui.catalogue.CatalogueFragment">
 
-    <TextView
-        android:id="@+id/text_gallery"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
+        android:theme="@style/Theme.Swampsploit.AppBarOverlay" >
+
+        <TextView
+            android:id="@+id/title_text"
+            android:layout_width="354dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:drawableLeft="@drawable/baseline_back_arrow"
+            android:drawableRight="@drawable/baseline_search_white_24dp"
+            android:drawablePadding="20.0dp"
+            android:text="Exploits"
+            android:textColor="@color/white"
+            android:textSize="25sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="parent"
+            app:layout_constraintVertical_bias="1.0" />
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <Button
+        android:id="@+id/ProFTPD_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="604dp"
+        android:text="ProFTPD"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintVertical_bias="1.0" />
+
+    <TextView
+        android:id="@+id/ProFTPD_text"
+        android:layout_width="423dp"
+        android:layout_height="108dp"
+        android:layout_margin="0dp"
+        android:background="@color/offWhite"
+        android:textColor="@color/maroon"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toTopOf="@+id/OpenSMTPD_button"
+        app:layout_constraintEnd_toEndOf="@+id/ProFTPD_button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ProFTPD_button"
+        app:layout_constraintVertical_bias="0.361" />
+
+    <Button
+        android:id="@+id/OpenSMTPD_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="313dp"
+        android:text="OpenSMTPD"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ProFTPD_button"
+        app:layout_constraintVertical_bias="0.444" />
+
+    <TextView
+        android:id="@+id/OpenSMTPD_text"
+        android:layout_width="423dp"
+        android:layout_height="108dp"
+        android:layout_margin="0dp"
+        android:background="@color/offWhite"
+        android:textColor="@color/maroon"
+        android:textSize="25sp"
+        app:layout_constraintEnd_toEndOf="@+id/OpenSMTPD_button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/OpenSMTPD_button"
+        app:layout_constraintVertical_bias="0.361" />
+
+    <Button
+        android:id="@+id/Netatalk_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="313dp"
+        android:text="Netatalk"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/OpenSMTPD_text"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/Netatalk_text"
+        android:layout_width="423dp"
+        android:layout_height="108dp"
+        android:layout_margin="0dp"
+        android:background="@color/offWhite"
+        android:textColor="@color/maroon"
+        android:textSize="25sp"
+        app:layout_constraintEnd_toEndOf="@+id/Netatalk_button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Netatalk_button"
+        app:layout_constraintVertical_bias="0.361" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
