--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,6 +6,32 @@
     android:layout_height="match_parent"
     tools:context=".ui.home.HomeFragment">
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/Theme.Swampsploit.AppBarOverlay" >
+
+        <TextView
+            android:id="@+id/title_text"
+            android:layout_width="380dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:drawableLeft="@drawable/baseline_menu_white_24dp"
+            android:drawableRight="@drawable/baseline_more_vert_white_24dp"
+            android:drawablePadding="25.0dp"
+            android:text="Home"
+            android:textColor="@color/white"
+            android:textSize="25sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="parent"
+            app:layout_constraintVertical_bias="1.0" />
+
+    </com.google.android.material.appbar.AppBarLayout>
+
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
@@ -26,44 +52,46 @@
         android:layout_marginStart="1dp"
         android:layout_marginTop="113dp"
         android:layout_marginEnd="1dp"
-        android:layout_marginBottom="219dp"
+        android:layout_marginBottom="335dp"
         app:layout_constraintBottom_toTopOf="@+id/textView4"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_width="241dp"
+            android:layout_height="88dp">
 
-            <Space
-                android:layout_width="20dp"
+            <android.widget.Space
+                android:layout_width="5dp"
                 android:layout_height="wrap_content" />
 
             <Button
                 android:id="@+id/LibrarySizeTextView"
                 android:layout_width="150dp"
-                android:layout_height="wrap_content"
+                android:layout_height="120dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginLeft="20dp"
                 android:clickable="false"
+                android:text="# \n\n exploits loaded in the library"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                 tools:layout_editor_absoluteX="73dp"
                 tools:layout_editor_absoluteY="32dp" />
-
-            <Space
-                android:layout_width="40dp"
-                android:layout_height="wrap_content" />
 
             <Button
                 android:id="@+id/PayloadSizeTextview"
                 android:layout_width="150dp"
-                android:layout_height="wrap_content"
+                android:layout_height="120dp"
+                android:layout_marginLeft="15dp"
                 android:clickable="false"
+                android:text="# \n\n payloads loaded in the library"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                 tools:layout_editor_absoluteX="73dp"
                 tools:layout_editor_absoluteY="32dp" />
 
-            <Space
-                android:layout_width="20dp"
+            <android.widget.Space
+                android:layout_width="5dp"
                 android:layout_height="wrap_content" />
         </TableRow>
 
@@ -71,40 +99,62 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <Space
+            <android.widget.Space
                 android:layout_width="20dp"
                 android:layout_height="wrap_content" />
 
             <Button
                 android:id="@+id/RegisteredTargetsTextView"
                 android:layout_width="150dp"
-                android:layout_height="wrap_content"
+                android:layout_height="120dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginLeft="20dp"
                 android:clickable="false"
+                android:text="# \n\n targets available to exploit"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                 tools:layout_editor_absoluteX="73dp"
                 tools:layout_editor_absoluteY="32dp" />
-
-            <Space
-                android:layout_width="40dp"
-                android:layout_height="wrap_content" />
 
             <Button
                 android:id="@+id/PastAttemptsTextView"
                 android:layout_width="150dp"
-                android:layout_height="wrap_content"
+                android:layout_height="120dp"
+                android:layout_marginLeft="15dp"
                 android:clickable="false"
+                android:text="# \n\n past attempts at exploitation"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                 tools:layout_editor_absoluteX="73dp"
                 tools:layout_editor_absoluteY="32dp" />
 
-            <Space
+            <android.widget.Space
                 android:layout_width="20dp"
                 android:layout_height="wrap_content" />
         </TableRow>
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
     </TableLayout>
+
+    <TextView
+        android:id="@+id/graphTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="26dp"
+        android:text="Session History"
+        android:textSize="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/historyChart"
+        app:layout_constraintVertical_bias="1" />
+
+    <ImageView
+        android:id="@+id/historyChart"
+        android:layout_width="264dp"
+        android:layout_height="250dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/textView4"
+        app:srcCompat="@drawable/img_matplotlib_pie1" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
