--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="red_500">#E91E63</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="yellow">#F6DD8D</color>
+    <color name="dustyRed">#C42A2A</color>
+    <color name="navyGreen">#013F51</color>
+    <color name="teal">#C1EAE4</color>
+    <color name="darkTeal">#347474</color>
+    <color name="salmon">#F57E76</color>
+    <color name="maroon">#7C0C0C</color>
+    <color name="white">#FEEFEF</color>
+    <color name="offWhite">#FCEAE8</color>
 </resources>
