--- a/app/src/main/res/layout/protfpd_dashboard.xml
+++ b/app/src/main/res/layout/protfpd_dashboard.xml
@@ -187,5 +187,13 @@
         app:layout_constraintStart_toStartOf="@+id/temp_path_input"
         app:layout_constraintTop_toBottomOf="@+id/temp_path_input" />
 
+    <Button
+        android:id="@+id/exploit_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        tools:layout_editor_absoluteX="6dp"
+        tools:layout_editor_absoluteY="506dp" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
