--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -8,19 +8,21 @@
 
     <!--com.google.android.material.appbar.AppBarLayout>
         android:id="@+id/toolbar"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:theme="@style/Theme.Swampsploit.AppBarOverlay" >
+        android:theme="@style/Theme.Swampsploit.AppBarOverlay"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/exploitText"
             android:layout_width="354dp"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
-            android:drawableLeft="@drawable/baseline_back_arrow"
             android:drawableRight="@drawable/baseline_search_white_24dp"
             android:drawablePadding="20.0dp"
-            android:text="Exploits"
+            android:text="Search . . ."
             android:textColor="@color/white"
             android:textSize="25sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -41,8 +43,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/ProFTPD_category"
