--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,4 +22,9 @@
         android:name="me.smoothhacker.swampsploit.ui.reports.ReportsFragment"
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_slideshow" />
+    <fragment
+        android:id="@+id/nav_hostscanner"
+        android:name="me.smoothhacker.swampsploit.ui.scanner.HostScanner"
+        android:label="@string/menu_hostscanner"
+        tools:layout="@layout/fragment_host_scanner" />
 </navigation>
