--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,8 +5,8 @@
     <color name="navyGreen">#013F51</color>
     <color name="teal">#C1EAE4</color>
     <color name="darkTeal">#347474</color>
-    <color name="salmon">#F57E76</color>
+    <color name="lighterMaroon">#A52E2E</color>
     <color name="maroon">#7C0C0C</color>
     <color name="white">#FEEFEF</color>
-    <color name="offWhite">#FCEAE8</color>
+    <color name="offWhite">#FFE0DD</color>
 </resources>
