--- a/app/src/main/res/layout/fragment_reports.xml
+++ b/app/src/main/res/layout/fragment_reports.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/reports_dashboard"
@@ -12,10 +12,9 @@
 
     <TextView
         android:id="@+id/sortBy"
-        android:layout_width="380dp"
+        android:layout_width="400dp"
         android:layout_height="33dp"
         android:layout_margin="15dp"
-        android:layout_marginTop="65dp"
         android:background="@drawable/rounded_light_maroon_textview"
         android:drawableRight="@drawable/baseline_sort_white_24dp"
         android:drawablePadding="5.0dp"
@@ -25,27 +24,34 @@
         android:paddingBottom="2dp"
         android:text="Sort by: recently completed"
         android:textColor="@color/white"
-        android:textSize="20sp" />
-
-    <LinearLayout
-        android:layout_width="400dp"
-        android:layout_height="39dp"
-        android:gravity="center_vertical">
+        android:textSize="20sp"
+        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.0"
+        tools:layout_editor_absoluteX="5dp"
+        tools:layout_editor_absoluteY="26dp" />
 
         <TextView
             android:id="@+id/recentReport"
             android:layout_width="400dp"
-            android:layout_height="30dp"
+            android:layout_height="25dp"
             android:background="@drawable/rounded_teal_textview"
             android:paddingLeft="10dp"
-            android:paddingTop="1.0dp"
             android:paddingBottom="1.0dp"
             android:text="<temporarily blank>"
             android:textColor="@color/navyGreen"
-            android:textSize="18sp" />
+            android:textSize="16sp"
+            android:layout_margin="5dp"
+            app:layout_constraintTop_toBottomOf="@+id/sortBy"
+            tools:layout_editor_absoluteX="5dp"
+            tools:layout_editor_absoluteY="133dp" />
 
-    </LinearLayout>
+        <FrameLayout
+            android:id="@+id/child_fragment_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-</LinearLayout>
+        </FrameLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
 
 
