Lots of polishing/setup
Polished/refactored the home fragment

Set up a skeleton/loose functionality to be able to share the reports externally via Gmail or GDrive.

--- a/app/src/main/res/layout/fragment_report_details.xml
+++ b/app/src/main/res/layout/fragment_report_details.xml
@@ -21,5 +21,17 @@
         app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="78dp" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginBottom="36dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.954"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/baseline_save_alt_white_24dp" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
