--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,6 +6,171 @@
     android:layout_height="match_parent"
     tools:context=".ui.home.HomeFragment">
 
+    <!--    <TableLayout-->
+    <!--        android:id="@+id/tableLayout"-->
+    <!--        android:layout_width="0dp"-->
+    <!--        android:layout_height="0dp"-->
+    <!--        android:layout_marginStart="1dp"-->
+    <!--        android:layout_marginTop="113dp"-->
+    <!--        android:layout_marginEnd="1dp"-->
+    <!--        android:layout_marginBottom="335dp"-->
+    <!--        app:layout_constraintBottom_toTopOf="@+id/textView4"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:layout_constraintHorizontal_bias="1.0"-->
+    <!--        app:layout_constraintStart_toStartOf="parent"-->
+    <!--        app:layout_constraintTop_toTopOf="parent">-->
+
+    <!--        <TableRow-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="match_parent">-->
+
+    <!--            <android.widget.Space-->
+    <!--                android:layout_width="5dp"-->
+    <!--                android:layout_height="wrap_content" />-->
+
+    <!--            <Button-->
+    <!--                android:id="@+id/LibrarySizeTextView"-->
+    <!--                android:layout_width="150dp"-->
+    <!--                android:layout_height="120dp"-->
+    <!--                android:layout_marginLeft="20dp"-->
+    <!--                android:layout_marginRight="15dp"-->
+    <!--                android:clickable="false"-->
+    <!--                android:text="# \n\n exploits loaded in the library"-->
+    <!--                android:textAppearance="@style/TextAppearance.AppCompat.Body2"-->
+    <!--                tools:layout_editor_absoluteX="73dp"-->
+    <!--                tools:layout_editor_absoluteY="32dp" />-->
+
+    <!--            <Button-->
+    <!--                android:id="@+id/PayloadSizeTextview"-->
+    <!--                android:layout_width="150dp"-->
+    <!--                android:layout_height="120dp"-->
+    <!--                android:layout_marginLeft="15dp"-->
+    <!--                android:clickable="false"-->
+    <!--                android:text="# \n\n payloads loaded in the library"-->
+    <!--                android:textAppearance="@style/TextAppearance.AppCompat.Body2"-->
+    <!--                tools:layout_editor_absoluteX="73dp"-->
+    <!--                tools:layout_editor_absoluteY="32dp" />-->
+
+    <!--            <android.widget.Space-->
+    <!--                android:layout_width="5dp"-->
+    <!--                android:layout_height="wrap_content" />-->
+    <!--        </TableRow>-->
+
+    <!--        <TableRow-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="match_parent">-->
+
+    <!--            <android.widget.Space-->
+    <!--                android:layout_width="20dp"-->
+    <!--                android:layout_height="wrap_content" />-->
+
+    <!--            <Button-->
+    <!--                android:id="@+id/RegisteredTargetsTextView"-->
+    <!--                android:layout_width="150dp"-->
+    <!--                android:layout_height="120dp"-->
+    <!--                android:layout_marginLeft="20dp"-->
+    <!--                android:layout_marginRight="15dp"-->
+    <!--                android:clickable="false"-->
+    <!--                android:text="# \n\n targets available to exploit"-->
+    <!--                android:textAppearance="@style/TextAppearance.AppCompat.Body2"-->
+    <!--                tools:layout_editor_absoluteX="73dp"-->
+    <!--                tools:layout_editor_absoluteY="32dp" />-->
+
+    <!--            <Button-->
+    <!--                android:id="@+id/PastAttemptsTextView"-->
+    <!--                android:layout_width="150dp"-->
+    <!--                android:layout_height="120dp"-->
+    <!--                android:layout_marginLeft="15dp"-->
+    <!--                android:clickable="false"-->
+    <!--                android:text="# \n\n past attempts at exploitation"-->
+    <!--                android:textAppearance="@style/TextAppearance.AppCompat.Body2"-->
+    <!--                tools:layout_editor_absoluteX="73dp"-->
+    <!--                tools:layout_editor_absoluteY="32dp" />-->
+
+    <!--            <android.widget.Space-->
+    <!--                android:layout_width="20dp"-->
+    <!--                android:layout_height="wrap_content" />-->
+    <!--        </TableRow>-->
+
+    <!--    </TableLayout>-->
+
+    <TextView
+        android:id="@+id/idTVHead"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_margin="4dp"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:padding="4dp"
+        android:text="@string/exploit_engagement_history"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.github.mikephil.charting.charts.PieChart
+        android:id="@+id/pieChart"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_below="@id/idTVHead"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        app:layout_constraintEnd_toEndOf="@id/idTVHead"
+        app:layout_constraintStart_toStartOf="@id/idTVHead"
+        app:layout_constraintTop_toBottomOf="@id/idTVHead" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="328dp"
+        android:layout_height="76dp"
+        android:layout_below="@id/pieChart"
+        android:orientation="horizontal"
+        android:weightSum="3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/pieChart">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="3dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:padding="4dp"
+            android:text="@string/success"
+            android:textAlignment="center"
+            app:drawableLeftCompat="@drawable/ic_circle"
+            app:drawableTint="@color/green" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="3dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:padding="4dp"
+            android:text="@string/incomplete"
+            android:textAlignment="center"
+            app:drawableLeftCompat="@drawable/ic_circle"
+            app:drawableTint="@color/yellow" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="3dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:padding="4dp"
+            android:text="@string/failure"
+            android:textAlignment="center"
+            app:drawableLeftCompat="@drawable/ic_circle"
+            app:drawableTint="@color/dustyRed" />
+    </LinearLayout>
+
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
@@ -15,168 +180,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
         app:layout_constraintVertical_bias="0.963" />
-
-    <TableLayout
-        android:id="@+id/tableLayout"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="113dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="335dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView4"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <android.widget.Space
-                android:layout_width="5dp"
-                android:layout_height="wrap_content" />
-
-            <Button
-                android:id="@+id/LibrarySizeTextView"
-                android:layout_width="150dp"
-                android:layout_height="120dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="15dp"
-                android:clickable="false"
-                android:text="# \n\n exploits loaded in the library"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                tools:layout_editor_absoluteX="73dp"
-                tools:layout_editor_absoluteY="32dp" />
-
-            <Button
-                android:id="@+id/PayloadSizeTextview"
-                android:layout_width="150dp"
-                android:layout_height="120dp"
-                android:layout_marginLeft="15dp"
-                android:clickable="false"
-                android:text="# \n\n payloads loaded in the library"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                tools:layout_editor_absoluteX="73dp"
-                tools:layout_editor_absoluteY="32dp" />
-
-            <android.widget.Space
-                android:layout_width="5dp"
-                android:layout_height="wrap_content" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <android.widget.Space
-                android:layout_width="20dp"
-                android:layout_height="wrap_content" />
-
-            <Button
-                android:id="@+id/RegisteredTargetsTextView"
-                android:layout_width="150dp"
-                android:layout_height="120dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="15dp"
-                android:clickable="false"
-                android:text="# \n\n targets available to exploit"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                tools:layout_editor_absoluteX="73dp"
-                tools:layout_editor_absoluteY="32dp" />
-
-            <Button
-                android:id="@+id/PastAttemptsTextView"
-                android:layout_width="150dp"
-                android:layout_height="120dp"
-                android:layout_marginLeft="15dp"
-                android:clickable="false"
-                android:text="# \n\n past attempts at exploitation"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                tools:layout_editor_absoluteX="73dp"
-                tools:layout_editor_absoluteY="32dp" />
-
-            <android.widget.Space
-                android:layout_width="20dp"
-                android:layout_height="wrap_content" />
-        </TableRow>
-
-    </TableLayout>
-
-    <TextView
-        android:id="@+id/idTVHead"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="4dp"
-        android:gravity="center"
-        android:padding="4dp"
-        android:text="Exploit Engagement History"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="362dp" />
-
-    <com.github.mikephil.charting.charts.PieChart
-        android:id="@+id/pieChart"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:layout_below="@id/idTVHead"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        app:layout_constraintTop_toBottomOf="@id/tableLayout"
-        app:layout_constraintStart_toStartOf="@id/tableLayout"
-        app:layout_constraintEnd_toEndOf="@id/tableLayout"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/pieChart"
-        android:orientation="horizontal"
-        android:weightSum="3"
-        tools:layout_editor_absoluteX="32dp"
-        tools:layout_editor_absoluteY="628dp"
-        app:layout_constraintTop_toBottomOf="@id/pieChart">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="3dp"
-            android:layout_weight="1"
-            android:drawableLeft="@drawable/ic_circle"
-            android:drawableTint="@color/green"
-            android:gravity="center"
-            android:padding="4dp"
-            android:text="Success"
-            android:textAlignment="center" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="3dp"
-            android:layout_weight="1"
-            android:drawableLeft="@drawable/ic_circle"
-            android:drawableTint="@color/yellow"
-            android:gravity="center"
-            android:padding="4dp"
-            android:text="Inconclusive"
-            android:textAlignment="center" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="3dp"
-            android:layout_weight="1"
-            android:drawableLeft="@drawable/ic_circle"
-            android:drawableTint="@color/dustyRed"
-            android:gravity="center"
-            android:padding="4dp"
-            android:text="Failure"
-            android:textAlignment="center" />
-    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
