--- a/app/src/main/res/layout/fragment_report_details.xml
+++ b/app/src/main/res/layout/fragment_report_details.xml
@@ -8,18 +8,16 @@
 
     <TextView
         android:id="@+id/description_header"
-        android:layout_width="0dp"
-        android:layout_height="49dp"
-        android:layout_marginStart="6dp"
-        android:layout_marginEnd="6dp"
-        android:text="\nDescription"
-        android:textColor="@color/navyGreen"
-        android:textSize="16sp"
-        android:textStyle="bold"
+        android:layout_width="400dp"
+        android:layout_height="30dp"
+        android:layout_margin="10dp"
+        android:background="@drawable/rounded_light_maroon_textview"
+        android:paddingLeft="10dp"
+        android:text="Report for (date/time)"
+        android:textColor="@color/white"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="78dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
