--- a/app/src/main/res/layout/fragment_netatalk.xml
+++ b/app/src/main/res/layout/fragment_netatalk.xml
@@ -11,6 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="30dp"
         android:layout_margin="10dp"
+        android:layout_marginTop="30dp"
         android:background="@drawable/rounded_light_maroon_textview"
         android:text="Description"
         android:textColor="@color/white"
