--- a/app/src/main/res/layout/fragment_reports.xml
+++ b/app/src/main/res/layout/fragment_reports.xml
@@ -15,6 +15,7 @@
         android:layout_width="400dp"
         android:layout_height="0dp"
         android:layout_margin="15dp"
+        android:layout_marginTop="45dp"
         android:layout_marginBottom="645dp"
         android:background="@drawable/rounded_light_maroon_textview"
         android:drawableRight="@drawable/baseline_sort_white_24dp"
@@ -28,7 +29,7 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/recentReport"
